feat: Integrate EmailJS for contact form functionality and add email configuration validation

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ VITE_AVATAR_URL=https://your-avatar-image-url.com
 # Competitive Programming Handles
 VITE_CODEFORCES_HANDLE=your-codeforces-handle
 VITE_CODECHEF_HANDLE=your-codechef-handle
+
+# EmailJS Configuration
+VITE_EMAILJS_SERVICE_ID=your-emailjs-service-id
+VITE_EMAILJS_TEMPLATE_ID=your-emailjs-template-id
+VITE_EMAILJS_PUBLIC_KEY=your-emailjs-public-key
