--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist-ssr
 # Environment variables
 .env
 
+# Zencoder
+.zencoder
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
