feat: Add Playwright testing framework and implement initial test cases for portfolio website

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,13 @@ dist-ssr
 .env
 
 # Zencoder
-.zencoder
+.zencoder/*
+
+# Testing
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
 
 # Editor directories and files
 .vscode/*
